--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgMLvsoxfdqwP6P4azDz/Q",
+      "authorship_tag": "ABX9TyOx5tePXXUI+CpaY7aK3pAc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "h5CQByTZYUze"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "2Jf_v6LQYZbU"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         },
         "outputId": "8d2544d0-e64e-49e3-c953-8fab79472b2e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +564,7 @@
         },
         "outputId": "c98b8581-75f5-4f80-80d7-8088cd8b85ba"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         },
         "outputId": "505e46d6-312e-4300-ac81-9cada3efc688"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +652,7 @@
         },
         "outputId": "14bede30-2745-4683-f05f-8ad358b43554"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
         },
         "outputId": "2deb59e2-5695-4b12-f1c3-0e7adbc67987"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +820,7 @@
         },
         "outputId": "1266d08c-0210-470b-b875-db4fbe998b7e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
         },
         "outputId": "0b0d3e8f-f36e-4ce1-a750-18ee7d7cabc0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -897,7 +897,7 @@
         },
         "outputId": "7c4a9aa9-bf1b-43a2-ce30-7094a28cb219"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
       "metadata": {
         "id": "7_bO3ktYZB8F"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1126,7 +1126,7 @@
         },
         "outputId": "291ba3a2-665b-442e-f056-aeaaed5c4a84"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1341,7 +1341,7 @@
         },
         "outputId": "271aa74c-dc73-445e-b2fb-822f73f4759f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1412,7 @@
         },
         "outputId": "aeabcb1b-fa2b-458d-a790-f57b87471955"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1444,7 +1444,7 @@
         },
         "outputId": "5eceffdc-c314-4241-9c62-472d718f56e9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1770,7 +1770,7 @@
         },
         "outputId": "dc7e3879-99d6-42ed-c1f1-b66f6fb3b7ff"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1807,7 +1807,7 @@
         },
         "outputId": "14d8e004-d716-422c-d847-a157909d8839"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1860,7 +1860,7 @@
         },
         "outputId": "28cff8e8-7eed-49c9-fe8b-586ef481b225"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1890,7 +1890,7 @@
         },
         "outputId": "1e9012fe-6809-46b3-c9ec-a2e7cbe2a270"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,7 +1930,7 @@
         },
         "outputId": "75a0d262-d6ae-4b68-db65-78956d6cd9cf"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1972,7 +1972,7 @@
         },
         "outputId": "a2f0cebc-5d6a-4ffa-c53d-d9290b66c4dd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2018,7 +2018,7 @@
         },
         "outputId": "e49e9ff2-7809-4655-a37e-9689ccc0d755"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2213,7 +2213,7 @@
         },
         "outputId": "0de50c9e-60c4-4d94-f48d-980b600e9547"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2387,7 +2387,7 @@
         },
         "outputId": "cd2e9549-e884-4ea3-c584-e89a85a09b52"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2579,7 +2579,7 @@
         },
         "outputId": "01ab3fc3-db50-4ea9-eba8-231675ac18a5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2620,7 +2620,7 @@
         },
         "outputId": "c4e53184-21fa-45d9-bf54-d95e323851cb"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2814,7 +2814,7 @@
         },
         "outputId": "8fb60f60-791d-4fbc-ee4c-0aa881273ad3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3050,7 +3050,7 @@
         },
         "outputId": "fb5612f1-beea-4bc8-c494-377a02231494"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3245,7 +3245,7 @@
         },
         "outputId": "f63f8743-c003-4805-855f-04077fac3f33"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3495,7 +3495,7 @@
         },
         "outputId": "04138214-22b9-4960-823a-05e57bd93618"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3684,7 +3684,7 @@
         },
         "outputId": "fd53e032-fd50-46e4-b051-3d48320a6028"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3919,7 +3919,7 @@
         },
         "outputId": "68633d9d-a724-4614-fc53-4eb5e5c7880b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4119,7 +4119,7 @@
         },
         "outputId": "dc737ff7-9d44-4918-d1cd-02c638ffcbca"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4292,7 +4292,7 @@
         },
         "outputId": "4cd3554e-7814-4789-c3b2-9ff7ca4f0fd4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4330,7 +4330,7 @@
         },
         "outputId": "bb870750-5cb0-44e6-d88d-8fd9248b0629"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4529,7 +4529,7 @@
       "metadata": {
         "id": "pjmiqyyALnie"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4564,7 +4564,7 @@
         },
         "outputId": "d94d4cf6-bf57-460f-a96d-a6cc0ae23ca4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4822,7 +4822,7 @@
         },
         "outputId": "739b960e-a6db-4585-d438-fbe6ff717dd5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4862,7 +4862,7 @@
         },
         "outputId": "57eab795-d129-4378-9b25-0eeb1369fcf0"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5085,7 +5085,7 @@
         "id": "fnRdu_-RXOe1",
         "outputId": "1edb5d74-3afb-4fb1-9bfa-f2471687be2f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5116,7 +5116,7 @@
         "id": "zwJnB3_vXQpl",
         "outputId": "f458fc75-79e1-4a5e-c7a8-bb0f94ce128d"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5147,7 +5147,7 @@
         "id": "0e8sNpL5XTFs",
         "outputId": "1feb2f66-b157-4976-8589-fe29492c7152"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5238,7 +5238,7 @@
         "id": "DHdz8BckX0Sz",
         "outputId": "28b01777-a5a1-4418-c3e7-f8ed5a7888e6"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5299,7 +5299,7 @@
         "id": "hh_MuLNeX6iN",
         "outputId": "c4b4831f-49f3-440a-ee5d-69779026344d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5340,7 +5340,7 @@
         "id": "hRir2_a2X8jf",
         "outputId": "75b340f4-41d7-44ca-e84a-96e7fe565af9"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5443,7 +5443,7 @@
         "id": "DAQdo43BYfoI",
         "outputId": "fc7305cb-ced8-4069-b625-6da450d8056c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5530,7 +5530,7 @@
         "id": "YZ-R9rMnYsoL",
         "outputId": "7ccdf32f-17be-452e-d97e-d4a0d3a1b7bc"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5574,7 +5574,7 @@
         "id": "JrVtOKEUYuHt",
         "outputId": "65241727-037c-4b3a-cfe2-74d24272f355"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5622,7 +5622,7 @@
         "id": "dfjFmFdjYv33",
         "outputId": "e0bc0dc7-2114-4a87-ecd7-0a0439042daf"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5659,7 +5659,7 @@
         "id": "sB3kzXRJYxj3",
         "outputId": "1a951104-c6b1-4836-d077-333ff92409a8"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5855,7 +5855,7 @@
         "id": "D5qgNBlRYzI1",
         "outputId": "5ba58d9b-04e1-4a0b-de07-a01aa05e28aa"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5891,7 +5891,7 @@
         "id": "0gs_6zCNY0tk",
         "outputId": "78876b0b-a16f-415f-eeb8-8556c42a5112"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5927,7 +5927,7 @@
         "id": "UiTtWPm9Y3Uj",
         "outputId": "5ee6335e-4924-4664-cc19-2a2339bd81ca"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5962,7 +5962,7 @@
         "id": "qJd5IXCCY5WF",
         "outputId": "6ae25aa0-421c-4c4e-d596-bc510da51698"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6055,7 +6055,7 @@
         "id": "nOrK1VXSZU27",
         "outputId": "daaa4a48-037d-42bb-f9ba-d9c9263f87e4"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6086,7 +6086,7 @@
         "id": "aAIbA9aVZWbF",
         "outputId": "01e385f5-cbba-4e37-af82-a700feafb5a1"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6121,7 +6121,7 @@
         "id": "id9nxfCZZX0C",
         "outputId": "a213c466-a206-4736-fb56-45f076e07fcc"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6236,7 +6236,7 @@
         "id": "krH8-vraZwg_",
         "outputId": "41f3d175-99f3-40fe-c1df-8fdf984150bc"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6328,7 +6328,7 @@
         "id": "cLxxTcwV-oTJ",
         "outputId": "443c0817-898c-40a0-821c-978bfaf61c75"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6417,7 +6417,7 @@
         "id": "MO5cu4fC-1Nn",
         "outputId": "514f47e1-2e08-472c-9b23-edf1d88c00f9"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6458,7 +6458,7 @@
         "id": "NipU2iVr-4jV",
         "outputId": "c6dd6c2c-2fee-40f3-9d57-a71b90da5b8d"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6523,7 +6523,7 @@
       "cell_type": "markdown",
       "source": [
         "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
+        "We clearly see which type of room types are more in NYC and their availability"
       ],
       "metadata": {
         "id": "PE4-DOjR_GpE"
@@ -6558,7 +6558,7 @@
         "id": "9jGEZ6GG_mGH",
         "outputId": "ef2dd9a9-7b03-43c9-fe5a-df24beec22b7"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6598,7 +6598,7 @@
         "id": "yKftVOIc_nnt",
         "outputId": "cdf8613c-e9ea-4ba6-c5c8-a739a29e33b7"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6688,7 +6688,7 @@
           "height": 513
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6743,11 +6743,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can see that Manhattan has the highest(the costliest) average of price ranging to 150dollars/day followed by Brooklyn\n",
-        "\n",
-        "Queens and Staten Island have same average price/day, while Bronx comes out to be the cheapest neighbourhood group in New York city.\n",
-        "\n",
-        "We have used pointplot here so that it can be easily understable for us that manhattan has the costliest average price per day followed by brooklyn. While besides bronx, other cities have same average price per day. "
+        "From the above graph, we can clearly see that number of reviews, a listing receives does not have much of an impact on the price."
       ],
       "metadata": {
         "id": "hX5_mw6OEYRm"
@@ -6787,7 +6783,11 @@
       "cell_type": "markdown",
       "source": [
         "#### What do you suggest the client to achieve Business Objective ? \n",
-        "Explain Briefly."
+        "Easy of Use - Search by price, locations and check-in/check-out dates\n",
+        "Home Incentive - They can make money by sitting at home\n",
+        "List Once - Hosts post one time only\n",
+        "First to Market - For transaction-based temporary housing site\n",
+        "Profiles and Bookings - Browse profiles of the hosts and book in just few steps."
       ],
       "metadata": {
         "id": "6hT1YLH2_1Bx"
